k8s/result-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
  creationTimestamp: "2026-05-08T12:00:00Z"
  generation: 1
  name: result-app 
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: result-app
  strategy: 
    type: Recreate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: result-app
    spec:
      containers:
      - name: result-app
        image: radoelker/result-app:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 80
          name: http-80-result
      restartPolicy: Always
