k8s/vote-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vote-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vote-app
  template:
    metadata:
      labels:
        app: vote-app
    spec:
      containers:
        - image: radoelker/voting-app:latest
          name: vote
          ports:  
            - containerPort: 80
              name: http-80-vote
      restartPolicy: Always
