k8s/result-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: result-service
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  selector:
    app: result-app
