k8s/vote-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vote-service
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  selector:
    app: vote-app
